--- a/AQL/src/main/res/layout/activity_main.xml
+++ b/AQL/src/main/res/layout/activity_main.xml
@@ -4,14 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.main.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="@dimen/distance_0dp"
+        android:scrollbars="none"/>
+
+    <ImageView
+        android:id="@+id/img_search"
+        android:layout_width="@dimen/distance_20dp"
+        android:layout_height="@dimen/distance_20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/distance_10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/search"/>
+
+    <ImageView
+        android:id="@+id/img_locate"
+        android:layout_width="@dimen/distance_20dp"
+        android:layout_height="@dimen/distance_20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/distance_10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/location"/>
 </RelativeLayout>
