--- a/AQL/src/main/res/values/styles.xml
+++ b/AQL/src/main/res/values/styles.xml
@@ -10,4 +10,9 @@
         <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
+    <style name="Popup_Animation" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/in</item>
+        <item name="android:windowExitAnimation">@anim/out</item>
+    </style>
+
 </resources>
