--- a/AQL/src/main/res/layout/activity_main.xml
+++ b/AQL/src/main/res/layout/activity_main.xml
@@ -4,33 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".activities.main.MainActivity">
 
-    <ListView
-        android:id="@+id/lv"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="@dimen/distance_0dp"
-        android:scrollbars="none"/>
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/img_search"
-        android:layout_width="@dimen/distance_20dp"
-        android:layout_height="@dimen/distance_20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/distance_10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/search"/>
+        <ListView
+            android:id="@+id/lv1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:listSelector="@android:color/transparent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-    <ImageView
-        android:id="@+id/img_locate"
-        android:layout_width="@dimen/distance_20dp"
-        android:layout_height="@dimen/distance_20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/distance_10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/location"/>
 </RelativeLayout>
