--- a/AQL/src/main/res/layout/activity_more.xml
+++ b/AQL/src/main/res/layout/activity_more.xml
@@ -4,10 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="www.aql.com.activities.more.MoreActivity">
+
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/distance_title"
+        android:background="@color/colorPrimary">
+
+        <include layout="@layout/imageview_back"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="更多"
+            android:textColor="@color/white"
+            android:textSize="@dimen/ts_20sp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_marquee"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_title"
+        android:gravity="center_horizontal"
+        android:paddingBottom="@dimen/distance_10dp"
+        android:paddingTop="@dimen/distance_10dp">
+
+        <ImageView
+            android:id="@+id/img_marquee"
+            android:layout_width="@dimen/distance_20dp"
+            android:layout_height="@dimen/distance_20dp"
+            android:layout_centerVertical="true"
+            android:scaleType="centerInside"
+            android:src="@drawable/img_marquee"/>
+
+        <TextView
+            android:id="@+id/tv_congratulation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/distance_10dp"
+            android:layout_toRightOf="@id/img_marquee"
+            android:text="恭喜"
+            android:textColor="@color/black"
+            android:textSize="@dimen/ts_12sp"/>
+
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/tv_congratulation"
+            android:text="平凡的世界"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/ts_12sp"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/tv_username"
+            android:text="3天前获得"
+            android:textColor="@color/black"
+            android:textSize="@dimen/ts_12sp"/>
+
+        <TextView
+            android:id="@+id/tv_award"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/tv_time"
+            android:text="INBIKE超轻骑行头盔"
+            android:textColor="@color/red"
+            android:textSize="@dimen/ts_12sp"/>
+    </RelativeLayout>
+
+    <GridView
+        android:id="@+id/gv_more"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_marquee"
+        android:columnWidth="@dimen/distance_150dp"
+        android:horizontalSpacing="@dimen/distance_10dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="@dimen/distance_10dp"/>
 
 </RelativeLayout>
